# DataCrunchPhase2

./: .gitignore  LICENSE  README.md
AuthService/: .dockerignore  .eslintrc.json  docker-compose.yml  dockerfile  package.json
AuthService/libs/: package.json
AuthService/libs/logger/: package-lock.json  package.json
AuthService/libs/logger/src/: index.d.ts  index.mjs
AuthService/src/: index.mjs  private_auth.key
AuthService/src/config/: database.mjs  passport.mjs
AuthService/src/controllers/: authController.mjs
AuthService/src/models/: RefreshToken.mjs  User.mjs
AuthService/src/routes/: authRoute.mjs
AuthService/src/utils/: reg2seconds.mjs  tokenGenerator.mjs  tokenStore.mjs
AuthService/src/views/: ChangePassword.html  passwordchanged.html
DatasetProcessing/: datasetGroup.ipynb  datasetSplitter.ipynb
DatasetProcessing/priceData/: test_data.csv
DatasetProcessing/weatherData/: test_data.csv
StreamingService/: .gitignore  main.py  pyproject.toml  time_series.json
StreamingService/Datasets/priceData/: eval_data.csv
StreamingService/Datasets/weatherData/: eval_data.csv
StreamingService/app/: stream_engine.py
StreamingService/app/utils/: broadCaster.py  broadCasterFactory.py  loadDataset.py
