[tool.poetry]
name = "streamingservice"
version = "0.1.0"
description = ""
authors = ["ImalshaD <plid475@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
